# Telecom-Churn-Prediction

./: README.md  docker-compose.yaml  dockerfile  mlflow.db  pyproject.toml
Models/: Metadata.json
api/: main.py
api/static/: index.html
mlartifacts/1/models/m-039e118917db47849182f0e61753f588/artifacts/: MLmodel
mlartifacts/1/models/m-04ef682d254b473288749d9b83149a42/artifacts/: MLmodel
mlartifacts/1/models/m-04f1168922a340a7bf5f33775ed978c7/artifacts/: MLmodel
mlartifacts/1/models/m-055cf7c7d8d64af080a14237f41ccfaf/artifacts/: MLmodel
mlartifacts/1/models/m-0acf2a14dc064f969b422a71dc532704/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-0c48e6053a654e0f87a3cef062ce9b13/artifacts/: MLmodel
mlartifacts/1/models/m-0f0e2234226345da8340dab4d686fa61/artifacts/: MLmodel
mlartifacts/1/models/m-11d8a6a97e094b659aceae1a6cfcb508/artifacts/: MLmodel
mlartifacts/1/models/m-12d10c48ab52487094b3b22e5238da58/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-1fef53d233ce4db98c4baf018f9a3f0f/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-27bcf3199d5846b78c8c0f58f4600b99/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-2af55724cb1e438ea496139580ed8418/artifacts/: MLmodel
mlartifacts/1/models/m-35850b392b4844f9b6479e4d675b2c64/artifacts/: MLmodel
mlartifacts/1/models/m-3fd2fa04e69749eabf5816ef5ba5a321/artifacts/: MLmodel
mlartifacts/1/models/m-42525ddcdec6426b827f2221e5545615/artifacts/: MLmodel  model.pkl
notebooks/: ML.ipynb  ML_exp_tracking.ipynb  mlflow.db
src/: Untitled.ipynb  ingest_data.ipynb  ingest_data.py  notebook.ipynb
(+43 files in other folders)
