[project]
name = "telecom-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "notebook>=7.5.5",
    "pandas>=2.0,<3",
    "protobuf>=4.21,<5.0",
    "psycopg2>=2.9.11",
    "pyarrow>=4.0,<23",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]